# platform_system_core

./: Makefile.am  configure.ac
libmincrypt/: mincrypt.pc.in
